-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.0
-
-
bbd1228b17ee3f3a5483f88b0a581d6a60c41cad
When qmake generates Xcode projects, it uses the string "<Group>" instead of "<group>" as the PBXFileReference's sourceTree. This leads to users being unable to drag and drop files into the project as the path becomes corrupted, stripping off the leading slash and leading to an "absolute" path like "Users/foo/bar/baz.m".
We should use the lowercase "<group>" to correct this issue.
Also, I remember at one point there was a change made to the generator which forced all source file paths to absolute. I wonder if that was actually a workaround for the <Group> vs <group> issue we are seeing now?
I'll also try to test with older versions of Xcode and older versions of the Xcode project format to see if this was originally <Group> (uppercase) at any point.
| For Gerrit Dashboard: QTBUG-52701 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 156326,2 | Fix Group-relative specification of files in generated Xcode projects. | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |